# pdf

./: .gitignore  CMakeLists.txt  README.md  vix.json
examples/: 01_basic.cpp  02_text.cpp  03_table.cpp  04_drawing.cpp  05_metadata.cpp  CMakeLists.txt
include/rix/: pdf.hpp
include/rix/pdf/: PdfModule.hpp  Version.hpp  pdf.hpp
include/rix/pdf/core/: Align.hpp  Color.hpp  Error.hpp  Font.hpp  LineStyle.hpp  Margins.hpp  PageSize.hpp  Result.hpp  Units.hpp
include/rix/pdf/document/: BorderStyle.hpp  Document.hpp  Image.hpp  Metadata.hpp  Page.hpp  Table.hpp  TextStyle.hpp
include/rix/pdf/writer/: Escape.hpp  FloatFormat.hpp  FontMetrics.hpp  FontRegistry.hpp  ImageRegistry.hpp  ObjectWriter.hpp  PdfWriter.hpp  XrefTable.hpp
src/: PdfModule.cpp  Version.cpp
src/core/: Color.cpp  Error.cpp  Font.cpp  Margins.cpp  PageSize.cpp
src/document/: Document.cpp  Image.cpp  Metadata.cpp  Page.cpp  Table.cpp
src/writer/: Escape.cpp  FloatFormat.cpp  FontMetrics.cpp  FontRegistry.cpp  ImageRegistry.cpp  ObjectWriter.cpp  PdfWriter.cpp  XrefTable.cpp
tests/: CMakeLists.txt  ColorTests.cpp  DocumentTests.cpp  EscapeTests.cpp  FloatFormatTests.cpp  FontMetricsTests.cpp  ImageTests.cpp  MetadataTests.cpp  PageSizeTests.cpp  PageTests.cpp  PdfCoreTests.cpp  PdfErrorTests.cpp  PdfModuleTests.cpp  PdfWriterTests.cpp
